--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "author": "codephs <codephs@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
-    "bitcoin-address-generator": "^1.0.2",
     "crypto-wallets": "^1.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
     "require-dir": "^1.2.0",
-    "simple-bitcoin-wallet": "^0.0.9",
     "yup": "^0.27.0"
   },
   "scripts": {
