--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "bcrypt": "^3.0.7",
     "crypto-wallets": "^1.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.12",
+    "nodemailer": "^6.3.1",
+    "nodemailer-express-handlebars": "^3.1.0",
     "require-dir": "^1.2.0",
     "yup": "^0.27.0"
   },
